--- a/src/app/pages/exhibition/exhibition.component.html
+++ b/src/app/pages/exhibition/exhibition.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-xl-4 d-none d-xl-flex flex-column justify-content-center">
       <div class="col d-flex align-items-end">
-          <div class="img-wrapper"><img class="middle-img borderImage" src="./assets/imgs/exhibition7.jpg" alt="" width="500px">
+          <div class="img-wrapper"><img class="middle-img borderImage" src="./assets/imgs/exhibition7.jpg" alt="" width="450px">
           </div>
       </div>
     </div>
@@ -18,21 +18,21 @@
 </div>
 <div class="row section-2">
       <div class="col-4 d-flex flex-column justify-content-center">
-          <div class="d-flex justify-content-center exhibition-description">A very brief, but still descriptive summary of what art work, styles, and artists
+          <div class="d-flex exhibition-description">A very brief, but still descriptive summary of what art work, styles, and artists
                   are popularly kept in this exhibition, when it was built , and any prominent
                   cultural significance
           </div>
-        <div class="d-flex w-100 justify-content-center">
-              <button class="btn btn-warning save-exhibition">Save Exhibition</button>
-            </div>
-          <div class="d-flex arrows-holder justify-content-center">
-            <button class="btn btn-light next-arrow-transp"><img style="height: 20px" class="m-auto" src="./assets/imgs/svg/arrow-pointing-to-left.svg"></button>
-            <button class="btn btn-light next-arrow-transp"><img style="height: 20px" class="m-auto" src="./assets/imgs/svg/arrow-pointing-to-right-gray.svg"></button>
+          <div class="d-flex justify-content-center exhibition-description">
+                <button class="btn btn-warning save-exhibition">Save Exhibition</button>
+          </div>
+          <div class="d-flex arrows-holder justify-content-center exhibition-description">
+            <button class="btn next-arrow-transp"><img style="height: 20px" class="m-auto" src="./assets/imgs/svg/arrow-pointing-to-left.svg"></button>
+            <button class="btn next-arrow-transp"><img style="height: 20px" class="m-auto" src="./assets/imgs/svg/arrow-pointing-to-right-gray.svg"></button>
           </div>
       </div>
       <div class="col-2 d-flex flex-column"></div>
       <div class="col-6 d-flex flex-column">
-          <img class="middle-img borderImage" src="./assets/imgs/exhibition6.jpg" alt="" width="800px" height="150px">
+          <img class="middle-img borderImage" src="./assets/imgs/exhibition6.jpg" alt="" width="700px" height="150px">
       </div>
   
 </div>
@@ -45,7 +45,7 @@
 <div class="row section-4">
     <div class="col-xl  col-md  col-12 place-left d-flex ">
         <div class="hovereffect w-100">
-          <img class="" src="../../../assets/imgs/map.png" alt="" style="width: 500px">
+          <img class="" src="../../../assets/imgs/map.png" alt="" style="width: 650px">
           <div class="row m-0">
             <div class="col d-flex bot-part">
                 <div class="d-flex" style="margin: auto 0  2rem 1.5rem">
@@ -58,13 +58,17 @@
     <div class="col-xl-2 col-md-3 col-12 place-right  works-data">
   
       <div class="col m-auto d-flex flex-column">
-        <span class="m-100  exhibition-works-title">Date established</span>
-        <span class="m-100  exhibition-works-number">2008</span>
+        <span class="m-100 exhibition-works-title">Date established</span>
+        <span class="m-100 exhibition-works-number">2008</span>
       </div>
       <div class="col m-auto d-flex flex-column">
         <span class="m-100 exhibition-works-title">Works held</span>
         <span class="m-100 exhibition-works-number">326</span>
       </div>
+      <div class="col m-auto d-flex flex-column">
+          <span class="m-100 exhibition-works-title">Address</span>
+          <span class="m-100 exhibition-works-number">NY USA</span>
+        </div>
     </div>
     <div class="col-xl-3 d-none d-lg-block "></div>
 </div>
