author & works changes

--- a/src/app/pages/database/database.component.scss
+++ b/src/app/pages/database/database.component.scss
@@ -385,3 +385,9 @@ div.search-block {
   border: 1px solid #000000;
   padding: 1px;
 }
+
+img.search-icon {
+  width: 18px;
+  margin: auto;
+  stroke: white;
+}
