--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -8,11 +8,6 @@ h3 {
   margin: 0 0 10px;
 }
 
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
-}
-
 .container-fluid {
   padding: 70px 50px 50px 50px;
 }
@@ -92,4 +87,10 @@ pre {
   #state-button {
     font-size: 1.2em;
   }
+}
+.angular-popper.visible {
+  z-index: 99999;
+  width: 300px;
+  height: 250px;
+  font-size: 12px;
 }
