--- a/src/app/pages/museum-worklist/museum-worklist.component.scss
+++ b/src/app/pages/museum-worklist/museum-worklist.component.scss
@@ -2,29 +2,25 @@
   margin: 50px 50px 70px 50px;
 }
 .art-container {
-  width: 90%;
-  height: 450px;
+  width: 350px;
   margin: auto;
-  margin-bottom: 70px;
 }
 .art-card {
   width: 100%;
-  height: 400px;
 }
 
 .art-item {
   display: block;
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
 .art-title {
   width: 100%;
-  height: 50px;
   margin: auto;
   text-align: left;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 .art-arttitle {
@@ -50,4 +46,29 @@ dyn-page:nth-child(even) {
 
 .loading {
   text-align: center;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.masonry-container {
+  width: 1450px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 900px) {
+  .masonry-container {
+    width: 350px;
+  }
+}
+@media screen and (max-width: 1200px) and (min-width: 900px) {
+  .masonry-container {
+    width: 750px;
+  }
+}
+@media screen and (max-width: 1550px) and (min-width: 1200px) {
+  .masonry-container {
+    width: 1100px;
+  }
 }
